# vibe-tui

./: .gitignore  README.md  VERIFY.md  example.py  pyproject.toml  vibe_browser.py
vibe_tui/: __init__.py  statements.py
vibe_tui/UI/: __init__.py  base_widgets.py  widgets.py
vibe_tui/UI/interactive/: __init__.py  basic.py  clickable.py  textinput.py
vibe_tui/UI/interactive/images/: __init__.py  image.py
vibe_tui/base/: __init__.py  basic.py  colors.py  theme.py
vibe_tui/event/: eventmanager.py
vibe_tui/keyinput/: __init__.py  key.py
vibe_tui/layouts/: .__init__.py.swp  __init__.py  baselayouts.py
vibe_tui/managers/: __init__.py  app.py  manager.py
vibe_tui/node/: __init__.py  basenode.py
