[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-tui"
version = "0.7.0"
authors = [
  { name = "Adam Hany (Domy)" },
]
description = "A sophisticated, layered TUI framework with weight-based layouts and focus management."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "wcwidth"
]

[project.optional-dependencies]
loader = ["vibe-load>=1.7.0"]
images = ["term_image"]

[project.urls]
"Homepage" = "https://github.com/domm-hub/vibe-tui"

[tool.setuptools.packages.find]
where = ["."]
include = ["vibe_tui*"]